[package]
name = "eddc-exact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecount = "*"
serde = { version = "1.0", features = ["derive"] }
rayon = "*"
clap = {version = "*", features = ["derive"] }